Fixed Similar Movies Word Wrap Bug

--- a/src/styles/Similar.css
+++ b/src/styles/Similar.css
@@ -16,6 +16,7 @@
 
 .movie {
   padding: 10px;
+  width: 150px;
 }
 
 .similar-movie-poster-wrapper {
@@ -37,6 +38,7 @@
   margin-left: 2px;
   font-size: medium;
   font-weight: 500;
+  word-wrap: break-word;
 }
 
 /* Hide scrollbar for Chrome, Safari and Opera */
